--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,7 @@
+@import "https://cdnjs.cloudflare.com/ajax/libs/pretendard/1.3.6/static/pretendard.css";
+@import "../node_modules/bootstrap/scss/bootstrap";
+
+
 $primary: #4e8486;
 $secondary: #4b5e57;
 $dark: #2F4F50;
-
-@import "../node_modules/bootstrap-icons/font/bootstrap-icons.css";
-@import "../node_modules/bootstrap/scss/bootstrap";
