--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 @import "https://cdnjs.cloudflare.com/ajax/libs/pretendard/1.3.6/static/pretendard.css";
 @import "../node_modules/bootstrap/scss/bootstrap";
+@import "custom";
 
 
 $primary: #4e8486;
