--- a/scss/main.scss
+++ b/scss/main.scss
@@ -5,3 +5,8 @@ $font-family-sans-serif:'pretendard';
 $primary: #4e8486;
 $secondary: #4b5e57;
 $dark: #2F4F50;
+
+$tkth1: normal,300,50px,'pretendard';
+.test{
+  font: $tkth1;
+}
