letter-spacing test1

--- a/css/main.css
+++ b/css/main.css
@@ -10821,5 +10821,9 @@ textarea.form-control-lg {
   }
 }
 .test {
-  font: normal, 300, 50px, "pretendard";
+  font: normal 300 50px "pretendard", sans-serif;
+}
+
+html, body {
+  letter-spacing: -0.8px;
 }/*# sourceMappingURL=main.css.map */
