--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,7 +6,10 @@ $primary: #4e8486;
 $secondary: #4b5e57;
 $dark: #2F4F50;
 
-$tkth1: normal,300,50px,'pretendard';
+$tkth1: normal 300 50px 'pretendard',sans-serif;
 .test{
   font: $tkth1;
+}
+html,body{
+  letter-spacing: -0.8px;
 }
